Make file, and relative paths in the report

--- a/week1/report/report.tex
+++ b/week1/report/report.tex
@@ -68,10 +68,10 @@ the gaussian distribution with $\mu = [1.0~ 1.0]$ and $\Sigma = [0.3~
 marked with red. The code can be seen in \ref{text:Code}
 
 \begin{figure}[!ht]
-\centering
-\includegraphics[width=0.6\textwidth]{images/q1_1}
-\caption{100 data points, correct mean with blue and estimated mean red.}
-\label{fig:q1_1}
+  \centering
+  \includegraphics[width=0.6\textwidth]{images/q1_1}
+  \caption{100 data points, correct mean with blue and estimated mean red.}
+  \label{fig:q1_1}
 \end{figure}
 
 To quantify how much the estimated mean deviates from the correct
@@ -83,24 +83,24 @@ seen from the drawing, the points are placed really close.
 \subsection*{Question 1.3}
 
 \begin{figure}[!ht]
-\centering
-\includegraphics[width=0.6\textwidth]{images/q1_3a}
-\caption{a shows $p(x_1)$ and b shows $p(x_2)$ using 11 bins.}
-\label{fig:q1_3a}
+  \centering
+  \includegraphics[width=0.6\textwidth]{images/q1_3a}
+  \caption{a shows $p(x_1)$ and b shows $p(x_2)$ using 11 bins.}
+  \label{fig:q1_3a}
 \end{figure}
 
 \begin{figure}[!ht]
-\centering
-\includegraphics[width=0.6\textwidth]{images/q1_3b}
-\caption{a shows $p(x_1)$ and b shows $p(x_2)$ using 5 bins.}
-\label{fig:q1_3b}
+  \centering
+  \includegraphics[width=0.6\textwidth]{images/q1_3b}
+  \caption{a shows $p(x_1)$ and b shows $p(x_2)$ using 5 bins.}
+  \label{fig:q1_3b}
 \end{figure}
 
 \begin{figure}[!ht]
-\centering
-\includegraphics[width=0.6\textwidth]{images/q1_3c}
-\caption{a shows $p(x_1)$ and b shows $p(x_2)$ using 25 bins.}
-\label{fig:q1_3c}
+  \centering
+  \includegraphics[width=0.6\textwidth]{images/q1_3c}
+  \caption{a shows $p(x_1)$ and b shows $p(x_2)$ using 25 bins.}
+  \label{fig:q1_3c}
 \end{figure}
 
 There is no best way to select the bin width. If it is selected too
@@ -120,38 +120,38 @@ can be solved by looking at the figures and selecting appropriate bin
 numbers.
 
 \begin{figure}[!ht]
-\centering
-\includegraphics[width=0.6\textwidth]{images/q1_4_100}
-\caption{Shows 3d histogram of 100 datapoints using $10$x$10$ bins}
-\label{fig:q1_4_100}
+  \centering
+  \includegraphics[width=0.6\textwidth]{images/q1_4_100}
+  \caption{Shows 3d histogram of 100 datapoints using $10$x$10$ bins}
+  \label{fig:q1_4_100}
 \end{figure}
 
 \begin{figure}[!ht]
-\centering
-\includegraphics[width=0.6\textwidth]{images/q1_4_1000}
-\caption{Shows 3d histogram of 1000 datapoints using $10$x$10$ bins}
-\label{fig:q1_4_1000}
+  \centering
+  \includegraphics[width=0.6\textwidth]{images/q1_4_1000}
+  \caption{Shows 3d histogram of 1000 datapoints using $10$x$10$ bins}
+  \label{fig:q1_4_1000}
 \end{figure}
 
 \begin{figure}[!ht]
-\centering
-\includegraphics[width=0.6\textwidth]{images/q1_4_10000}
-\caption{Shows 3d histogram of 10000 datapoints using $10$x$10$ bins}
-\label{fig:q1_4_10000}
+  \centering
+  \includegraphics[width=0.6\textwidth]{images/q1_4_10000}
+  \caption{Shows 3d histogram of 10000 datapoints using $10$x$10$ bins}
+  \label{fig:q1_4_10000}
 \end{figure}
 
 \begin{figure}[!ht]
-\centering
-\includegraphics[width=0.6\textwidth]{images/q1_4_10000_b15}
-\caption{Shows 3d histogram of 10000 datapoints using $15$x$15$ bins}
-\label{fig:q1_4_10000_b15}
+  \centering
+  \includegraphics[width=0.6\textwidth]{images/q1_4_10000_b15}
+  \caption{Shows 3d histogram of 10000 datapoints using $15$x$15$ bins}
+  \label{fig:q1_4_10000_b15}
 \end{figure}
 
 \begin{figure}[!ht]
-\centering
-\includegraphics[width=0.6\textwidth]{images/q1_4_10000_b20}
-\caption{Shows 3d histogram of 10000 datapoints using $20$x$20$ bins}
-\label{fig:q1_4_10000_b20}
+  \centering
+  \includegraphics[width=0.6\textwidth]{images/q1_4_10000_b20}
+  \caption{Shows 3d histogram of 10000 datapoints using $20$x$20$ bins}
+  \label{fig:q1_4_10000_b20}
 \end{figure}
 
 
@@ -165,7 +165,7 @@ numbers.
 
 \newpage
 \subsection*{\label{text:Code}}
-\lstinputlisting{/home/bp/documents/ku/2009-2010/smfml/week1/src/probability_and_parameter_estimation.m}
+\lstinputlisting{../src/probability_and_parameter_estimation.m}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
