Added a few figure references in the report.

--- a/week1/report/report.tex
+++ b/week1/report/report.tex
@@ -109,14 +109,14 @@ the structure of the distribution. Selecting the bin width too large,
 can result in bimodal structure of the distribution being lost. So one
 needs to use some intermediate value as bin width. In our case,
 selecting a total of 11 bins seems to provide a good estimation of the
-distribution.
+distribution, as seen in figure \ref{fig:q1_3a}, \ref{fig:q1_3b}, and \ref{fig:q1_3c}.
 
 \subsection*{Question 1.4}
 
-From the figures it can be seen that the gaussian distribution is
-rotated because the $\Sigma$-matrix different values in the
-diagonal. The figures show the same tendency as in question 1.3 and
-can be solved by looking at the figures and selecting appropriate bin
+From the figures \ref{fig:q1_4_100}-\ref{fig:q1_4_10000_b20} it can be seen that
+the gaussian distribution is rotated because the $\Sigma$-matrix different
+values in the diagonal. The figures show the same tendency as in question 1.3
+and can be solved by looking at the figures and selecting appropriate bin
 numbers.
 
 \begin{figure}[!ht]
@@ -165,7 +165,7 @@ numbers.
 
 \newpage
 \subsection*{\label{text:Code}}
-\lstinputlisting{/home/bp/documents/ku/2009-2010/smfml/week1/src/probability_and_parameter_estimation.m}
+\lstinputlisting{../src/code/probability_and_parameter_estimation.m}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
