--- a/week1/report/report.tex
+++ b/week1/report/report.tex
@@ -186,7 +186,7 @@ If we set L to 10000 the auto-correlation get very small, and chaces
 less betwin run, se figur \ref{L10000} this is at we ekspectet, since
 more sampels, decrices the distens betwine the point.
 
-\begin{figure}[!ht]
+\begin{figure}[!h]
   \centering
   \includegraphics[width=0.6\textwidth]{images/L10000}
   \caption{auto-correlation, when $L = 10000$}
