--- a/week1/report/report.tex
+++ b/week1/report/report.tex
@@ -178,15 +178,15 @@ the large step size.
 
 \subsection*{Question 1.6}
 
-The auto-correlation is non-zero, since we have feawer samples, and the
-are distributes randomly , if we increase the number of samples L, the
-auto-correlation get small, see figure \ref{L10000}.When running the
-program menny timse, we get diffrent result, bot the paton is the same.
-If we set L to 10000 the auto-correlation get very small, and chaces
-less betwin run, se figur \ref{L10000} this is at we ekspectet, since
-more sampels, decrices the distens betwine the point.
+The auto-correlation is non-zero since we have few samples, and they
+are distributes randomly. If we increase the number of samples $L$, the
+auto-correlation gets smaller, see figure \ref{L10000}. When running the
+program many times, we get different results, but the pattern is the same.
+If we set $L$ to $10000$, the auto-correlation gets very small and changes
+less between runs, see figure \ref{L10000}. This is as we expected, since
+more samples, decreases the distance between the points.
 
-\begin{figure}[!h]
+\begin{figure}[!htpb]
   \centering
   \includegraphics[width=0.6\textwidth]{images/L10000}
   \caption{auto-correlation, when $L = 10000$}
