--- a/week1/report/report.tex
+++ b/week1/report/report.tex
@@ -164,10 +164,10 @@ In graph \ref{fig:q5} shows the difference between $\mu _y$, $\hat{y}$ convergen
   \label{fig:q5}
 \end{figure}
 
-In graph \ref{fig:q5_log} we have takent the log of the difference, and
-since the difference is are approximation for at exp function, the
-plottet line shot be liner. Bot it isent, becorce of the bade aprox or
-the large step size.
+In graph \ref{fig:q5_log} we have taken the log of the difference, and
+since the difference is an approximation for an exponential function, the
+plotted line should be linear. It isn't quite linear, though, because of the bad
+approximation and the large step size.
 
 \begin{figure}[!ht]
   \centering
