--- a/week1/report/report.tex
+++ b/week1/report/report.tex
@@ -380,7 +380,7 @@ We can thus conclude that the method, while successful on some images, can not g
 
 %\bibliographystyle{abbrvnat}
 %\bibliography{bibliography}
-%\addcontentsline{toc}{chapter}{Litteratur}
+%\addcontentsline{toc}{chapter}{Litteratur
 
 \end{document}
 
